fixed too much padding

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -417,6 +417,9 @@ logoimg {
     visibility: hidden;
     padding-bottom: 150px;
 }
+#emptyareasearch {
+    padding-bottom: 15px;
+}
 #emptyareaindex {
     padding-bottom: 30px;
 }
